alignment and stopping iphone detection

--- a/wp-content/themes/brando/assets/sass/main.scss
+++ b/wp-content/themes/brando/assets/sass/main.scss
@@ -1628,6 +1628,9 @@ textarea::-webkit-input-placeholder {
       .pl16{
           padding-left:10px;
       }
+      .pl12{
+          padding-left:11px;
+      }
       
       
     .contact-us-text{
